app/src/main/java/com/example/webtonative/core/domain/util/error/ValidationError.kt
package com.example.webtonative.core.domain.util.error

sealed interface ValidationError: Error {

    enum class UrlVE: ValidationError {
        Empty,
        Invalid
    }
}